# order/endpoint.go
@@ -40,6 +40,13 @@ type getOrdersRequest struct {
 	DateTo   interface{}
 }
 
+// @Summary Create new Order
+// @Tags Order
+// @Accept json
+// @Produce json
+// @Param addOrderRequest body order.addOrderRequest true "User data"
+// @Success 200 {object} order.OrderItem "New order created"
+// @Router /orders/ [post]
 func makeAddOrderEndPoint(s Service) endpoint.Endpoint {
 	return func(ctx context.Context, request interface{}) (interface{}, error) {
 		req := request.(addOrderRequest)
@@ -49,6 +56,13 @@ func makeAddOrderEndPoint(s Service) endpoint.Endpoint {
 	}
 }
 
+// @Summary Delete OrderDetail
+// @Tags Order
+// @Accept json
+// @Produce json
+// @Param orderDetailId path int true "User data"
+// @Success 200  {integer} int "ok"
+// @Router /orders/{id}/detail/{orderDetailId} [delete]
 func makeDeleteOrderDetailEndPoint(s Service) endpoint.Endpoint {
 	return func(ctx context.Context, request interface{}) (interface{}, error) {
 		req := request.(deleteOrderDetailRequest)
@@ -58,6 +72,13 @@ func makeDeleteOrderDetailEndPoint(s Service) endpoint.Endpoint {
 	}
 }
 
+// @Summary Delete Order
+// @Tags Order
+// @Accept json
+// @Produce json
+// @Param id path int true "User data"
+// @Success 200  {object} order.OrderItemDeleted "Order deleted and rows affected"
+// @Router /orders/{id} [delete]
 func makeDeleteOrderEndPoint(s Service) endpoint.Endpoint {
 	return func(ctx context.Context, request interface{}) (interface{}, error) {
 		req := request.(deleteOrderRequest)
@@ -67,6 +88,13 @@ func makeDeleteOrderEndPoint(s Service) endpoint.Endpoint {
 	}
 }
 
+// @Summary Get Order by Id
+// @Tags Order
+// @Accept json
+// @Produce json
+// @Param id path int true "User data"
+// @Success 200  {object} order.OrderItem "Order with details"
+// @Router /orders/{id} [get]
 func makeGetOrderItemByIdEndPoint(s Service) endpoint.Endpoint {
 	return func(ctx context.Context, request interface{}) (interface{}, error) {
 		req := request.(getOrderItemByIdRequest)
@@ -76,6 +104,13 @@ func makeGetOrderItemByIdEndPoint(s Service) endpoint.Endpoint {
 	}
 }
 
+// @Summary Get Orders
+// @Tags Order
+// @Accept json
+// @Produce json
+// @Param getOrdersRequest body order.getOrdersRequest true "User data"
+// @Success 200  {object} order.OrderList "Orders list paginated"
+// @Router /orders/paginated [post]
 func makeGetOrdersEndPoint(s Service) endpoint.Endpoint {
 	return func(ctx context.Context, request interface{}) (interface{}, error) {
 		req := request.(getOrdersRequest)
